adjust padding for mobile

--- a/css/gallery-grid.css
+++ b/css/gallery-grid.css
@@ -48,6 +48,11 @@
   .grid--margin-x {
     padding: 0px;
   }
+
+  .no-padding-on-mobile {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
 }
 
 
